🐛 fix swagger
